[package]
name = "ds1054z"
version = "0.1.0"
edition = "2018"

description = "A library for talking to Rigol DS1054Z oscilloscopes."
authors = ["Aaron Griffith <aargri@gmail.com>"]
repository = "https://github.com/agrif/ds1054z"
documentation = "https://docs.rs/ds1054z"
readme = "README.md"
license = "MIT"

keywords = ["rigol", "ds1054z", "scpi", "oscilloscope"]
categories = ["hardware-support", "science"]

[dependencies]
image = { version = "0.23", features = ["png"], default-features = false }
skippy = { git = "https://github.com/agrif/skippy" }
smol = "0.4"
